--- a/Diary.html
+++ b/Diary.html
@@ -48,6 +48,7 @@
         <h1 style="color: black;" class="spy display-4"><span class="fa fa-book fs-2x"> </span> Diary</h1>
         <form id="diary-form">
         <textarea class="p-5" name="" id="text" cols="30" rows="10">
+            <img src="/Images/diary-page1.jpg" alt="" srcset="">
         </textarea>
         <br>
         <button type="submit" onclick="window.location.reload()" class="btn" style="background-color: #fd7e14;">Done</button>
