--- a/Home.html
+++ b/Home.html
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card bg-dark text-white">
-                        <div class="row">
+                        <div class="row d-flex justify-content-around">
                             <div class="col-2 text-center ms-3" style="margin-top: 40px;">
                                 <i class="fa fa-book fa-5x"></i>
                             </div>
